# bbi-scirna-demux

./: LICENSE  README.md  experiment.config  main.nf  nextflow.config  run.demux.sh
NOTES/: notes.cloud.20250317.txt  notes.ligation_barcode_file.20250317.txt  notes.testing.rna_rtlig_demux.20250114.txt
data/: p5.bmartin.20211123.txt  p5.bmartin.20220927.txt  p5.txt  p5_index.txt  p7.txt
modules/: run_bclconvert.nf  run_check_samplesheet.nf  run_rna_rtlig_demux.nf  test.run_check_samplesheet.nf
samplesheet/: lims2scrunch.py  parameters.txt  samplesheet_scrunch.py  scirna_samplesheet.py
samplesheet/tests/: 00tests.txt  run.sh  run_all_tests.sh  run_check.sh  samplesheet01.csv  samplesheet02.csv  samplesheet04.csv  samplesheet05.csv  samplesheet07.csv  samplesheet09.csv  samplesheet10.csv  samplesheet100.csv  samplesheet11.csv  samplesheet110.csv  samplesheet111.csv  samplesheet112.csv  samplesheet113.csv  samplesheet114.csv  samplesheet115.csv  samplesheet116.csv  samplesheet117.csv  samplesheet118.csv  samplesheet12.csv  samplesheet120.csv  (+93 more)
src/rna_rtlig_demux/: Cargo.toml
src/rna_rtlig_demux/src/: NOTES.illumina  NOTES.test  check.rna_rtlig_demux_log.py  distill.rna_rtlig_demux_log.py  lib.rs  main.rs
src/rna_rtlig_demux/src/save/: main.rs.megasci_34_base_read_1_length.20250410
tools/: cmp_encoded_wells_to_well_names.py  densify_fastq.py  make_barcode_mismatch_seqs.py  make_well_index_table.py  nf_trace_max.py  pull_well_encoded_string.py  tabulate_bam_unaligned.py  tabulate_fastq.py  tabulate_star_bam_aligned.py  tabulate_starsolo_bam_aligned.py
(+68 files in other folders)
