[package]
name = "rna_rtlig_demux"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = "4.5.21"
mimalloc = "0.1.43"
itertools = "0.13.0"
csv = "1.3.1"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
bio = "2.0.3"
base_custom = "^0.1"
flate2 = "1.0.35"
rust-htslib = "0.48.0"
chrono = "0.4.38"
